Muhammad Rizvi: curated collated

--- a/collated/main/A0163848R.md
+++ b/collated/main/A0163848R.md
@@ -17,8 +17,6 @@
      * @param YTomorrow to add entries from
      */
     void importYTomorrow(ReadOnlyTaskManager add);
-
-}
 ```
 ###### /java/seedu/task/logic/LogicManager.java
 ``` java
@@ -36,7 +34,6 @@
     public void importYTomorrow(ReadOnlyTaskManager add) {
         model.mergeYTomorrow(add);
     }
-}
 ```
 ###### /java/seedu/task/logic/parser/RedoCommandParser.java
 ``` java
@@ -82,13 +79,6 @@ public class RedoCommandParser {
                     e.getMessage() + String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
         }
     }
-}
-```
-###### /java/seedu/task/logic/parser/DeleteCommandParser.java
-``` java
-        ArgumentTokenizer argsTokenizer =
-                new ArgumentTokenizer();
-        argsTokenizer.tokenize(args);
 ```
 ###### /java/seedu/task/logic/parser/ClearCommandParser.java
 ``` java
@@ -116,56 +106,6 @@ public class ClearCommandParser {
 
 }
 ```
-###### /java/seedu/task/logic/parser/UnmarkCommandParser.java
-``` java
-/**
- * Parses input arguments and creates a new UnmarkCommand object
- */
-public class UnmarkCommandParser {
-
-    /**
-     * Parses the given {@code String} of arguments in the context of the UnmarkCommand
-     * and returns an UnmarkCommand object for execution.
-     */
-    public Command parse(String args) {
-        assert args != null;
-        ArgumentTokenizer argsTokenizer = new ArgumentTokenizer();
-        argsTokenizer.tokenize(args);
-        List<Optional<String>> preambleFields = ParserUtil.splitPreamble(argsTokenizer.getPreamble().orElse(""), 2);
-
-        Optional<Integer> index = preambleFields.get(0).flatMap(ParserUtil::parseIndex);
-        if (!index.isPresent()) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
-        }
-
-```
-###### /java/seedu/task/logic/parser/UnmarkCommandParser.java
-``` java
-        return new UnmarkCommand(index.get());
-    }
-}
-```
-###### /java/seedu/task/logic/parser/UndoCommandParser.java
-``` java
-/**
- * Parses input arguments and creates a new DeleteCommand object
- */
-public class UndoCommandParser {
-
-    /**
-     * Parses the given {@code String} of arguments in the context of the UndoCommand
-     * and returns an UndoCommand object for execution.
-     */
-    public Command parse(String args) {
-        try {
-            return new UndoCommand();
-        } catch (NoSuchElementException nsee) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
-        }
-    }
-
-}
-```
 ###### /java/seedu/task/logic/parser/MarkCommandParser.java
 ``` java
 /**
@@ -188,9 +128,6 @@ public class MarkCommandParser {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
         }
 
-```
-###### /java/seedu/task/logic/parser/MarkCommandParser.java
-``` java
         return new MarkCommand(index.get());
     }
 }
@@ -373,24 +310,6 @@ public class ClearCommand extends Command {
     }
 }
 ```
-###### /java/seedu/task/logic/commands/DeleteCommand.java
-``` java
-        try {
-            this.targetIndex = Integer.parseUnsignedInt(token);
-        } catch (NumberFormatException e) {
-            this.targetName = token;
-        }
-```
-###### /java/seedu/task/logic/commands/DeleteCommand.java
-``` java
-        if (targetIndex != null && lastShownList.size() < targetIndex) {
-            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
-        }
-
-        ReadOnlyTask taskToDelete = null;
-        if (targetIndex != null) taskToDelete = lastShownList.get(targetIndex - 1);
-        if (targetName != null) taskToDelete = getTaskByName(lastShownList, targetName);
-```
 ###### /java/seedu/task/logic/commands/MarkCommand.java
 ``` java
 /**
@@ -444,34 +363,39 @@ public class MarkCommand extends Command {
 ```
 ###### /java/seedu/task/commons/core/GuiSettings.java
 ``` java
+    /**
+     * Gets the stylesheet stored in GuiSettings
+     * @return String path to stylesheet
+     */
     public String getStyleSheet() {
         return styleSheet;
     }
 
+    /**
+     * Gets the last loaded Y Tomorrow task database
+     * @return Path to last loaded task database
+     */
     public String getLastLoadedYTomorrow() {
         return lastLoadedYTomorrow;
     }
 
+    /**
+     * Stores the stylesheet path
+     * @param path to store
+     */
     public void setStyleSheet(String path) {
         styleSheet = path;
     }
 
+    /**
+     * Store the YTomorrow task database path
+     * @param path to store
+     */
     public void setLastLoadedYTomorrow(String path) {
         lastLoadedYTomorrow = path;
     }
 ```
-###### /java/seedu/task/commons/events/ui/ShowThemeRequestEvent.java
-``` java
-public class ShowThemeRequestEvent extends BaseEvent {
-
-    @Override
-    public String toString() {
-        return this.getClass().getSimpleName();
-    }
-
-}
-```
-###### /java/seedu/task/commons/events/ui/ImportRequestEvent.java
+###### /java/seedu/task/commons/events/storage/ImportRequestEvent.java
 ``` java
 /**
 * Represents a request to retrieve the file at the stored path.
@@ -484,6 +408,10 @@ public class ImportRequestEvent extends BaseEvent {
         this.target = target;
     }
 
+    /**
+     * Get file path to import from
+     * @return file path to import from
+     */
     public File getTargetFile() {
         return target;
     }
@@ -494,7 +422,7 @@ public class ImportRequestEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/task/commons/events/ui/ImportResultAvailableEvent.java
+###### /java/seedu/task/commons/events/storage/ImportResultAvailableEvent.java
 ``` java
 /**
  * Indicates that a new result is available.
@@ -507,6 +435,10 @@ public class ImportResultAvailableEvent extends BaseEvent {
         this.imported = imported;
     }
 
+    /**
+     * Get the imported YTomorrow task database
+     * @return Imported YTomorrow task database
+     */
     public Optional<ReadOnlyTaskManager> getImported() {
         return imported;
     }
@@ -518,8 +450,11 @@ public class ImportResultAvailableEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/task/commons/events/ui/ExportRequestEvent.java
+###### /java/seedu/task/commons/events/storage/ExportRequestEvent.java
 ``` java
+/**
+ * Represents a request to export the stored YTomorrow task file.
+ */
 public class ExportRequestEvent extends BaseEvent {
 
     private ReadOnlyTaskManager toExport;
@@ -530,10 +465,18 @@ public class ExportRequestEvent extends BaseEvent {
         this.target = target;
     }
 
+    /**
+     * Get the YTomorrow task database to export
+     * @return YTomorrow task database to export
+     */
     public ReadOnlyTaskManager getYTomorrowToExport() {
         return toExport;
     }
 
+    /**
+     * Gets the file path to export to
+     * @return File path to export to
+     */
     public File getTargetFile() {
         return target;
     }
@@ -545,7 +488,7 @@ public class ExportRequestEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/task/commons/events/ui/TargetFileRequestEvent.java
+###### /java/seedu/task/commons/events/storage/TargetFileRequestEvent.java
 ``` java
 /**
 * Represents a request to save changes to the stored path.
@@ -560,10 +503,18 @@ public class TargetFileRequestEvent extends BaseEvent {
         this.prefs = prefs;
     }
 
+    /**
+     * Get file path to redirect all further edits to
+     * @return File path to redirect all further edits to
+     */
     public File getTargetFile() {
         return target;
     }
 
+    /**
+     * Get user preferences to modify with target file path
+     * @return User preferences to modify
+     */
     public UserPrefs getUserPrefs() {
         return prefs;
     }
@@ -575,9 +526,33 @@ public class TargetFileRequestEvent extends BaseEvent {
 
 }
 ```
+###### /java/seedu/task/commons/events/ui/ShowThemeWindowRequestEvent.java
+``` java
+/**
+ * An event indicating a request to view the Theme Window.
+ */
+public class ShowThemeWindowRequestEvent extends BaseEvent {
+
+    @Override
+    public String toString() {
+        return this.getClass().getSimpleName();
+    }
+
+}
+```
 ###### /java/seedu/task/commons/util/DateUtil.java
 ``` java
+/**
+ * Class of date-related methods
+ */
 public class DateUtil {
+
+    /**
+     * Parses string and attempts to transform it into a date
+     * @param Natural-language string to interpret date from
+     * @return java.util.Date created from passed string
+     * @throws IllegalValueException
+     */
     public static Date parse(String rawDate) throws IllegalValueException {
         try {
             Parser parser = new Parser();
@@ -589,6 +564,12 @@ public class DateUtil {
         }
     }
 
+    /**
+     * Returns new date past given date by given days
+     * @param Date to start at
+     * @param Days to add
+     * @return New date past given date by given days
+     */
     public static Date add(Date date, int days) {
         Calendar c = Calendar.getInstance();
         c.setTime(date);
@@ -669,6 +650,12 @@ public class DateUtil {
         return getFileChooser(title, extensionFilters).showOpenDialog(stage);
     }
 
+    /**
+     * Returns a new file chooser prompt
+     * @param Title of prompt
+     * @param Extension filters to allow for writing/reading
+     * @return New file chooser prompt
+     */
     private static FileChooser getFileChooser(String title, ExtensionFilter ...extensionFilters) {
         FileChooser fileChooser = new FileChooser();
 
@@ -735,6 +722,12 @@ public class DeadlineTask extends Task {
 ```
 ###### /java/seedu/task/model/task/Task.java
 ``` java
+    /**
+     * Factory method to build a Task or Task-inheriting class from a given unordered array of properties.
+     * @param Properties to build Task with
+     * @return New Task with given properties
+     * @throws IllegalValueException Insufficient/invalid properties given
+     */
     public static Task factory(Object ...properties) throws IllegalValueException {
         Name name = CollectionUtil.firstOf(properties, Name.class);
         Group group = CollectionUtil.firstOf(properties, Group.class);
@@ -756,6 +749,7 @@ public class DeadlineTask extends Task {
 
         return null;
     }
+
 
     @Override
     public boolean hasPassed() {
@@ -789,6 +783,20 @@ public class FloatingTask extends Task {
     public FloatingTask(Name name, Group group, UniqueTagList tags) {
         super(name, null, null, group, tags);
     }
+}
+```
+###### /java/seedu/task/model/task/ReadOnlyTask.java
+``` java
+    /**
+     * @return Whether the task end date has passed the time of calling.
+     */
+    boolean hasPassed();
+    //@author
+
+    java.util.Date getEndTime();
+
+    java.util.Date getStartTime();
+
 }
 ```
 ###### /java/seedu/task/model/task/StartDate.java
@@ -864,6 +872,10 @@ public class History<T> {
         }
     }
 
+    /**
+     * Adds value after current state.  Deletes the previous next value.
+     * @param Value to add as next
+     */
     public void push(T next) {
         Node<T> nextNode = new Node<T>(next);
 
@@ -882,16 +894,24 @@ public class History<T> {
         return 1 + sizePrev(current) + sizeNext(current);
     }
 
-    private int sizePrev(Node source) {
+    /**
+     * @param Source node to count from
+     * @return Number of nodes before source node
+     */
+    private int sizePrev(Node<T> source) {
         return source.getPrevious() == null ? 0 : 1 + sizePrev(source.getPrevious());
     }
 
-    private int sizeNext(Node source) {
+    /**
+     * @param Source node to count from
+     * @return Number of nodes after source node
+     */
+    private int sizeNext(Node<T> source) {
         return source.getNext() == null ? 0 : 1 + sizePrev(source.getNext());
     }
 
     /**
-     * Double linked list node
+     * Doubly-linked-list node
      * @param <T> Element type to store
      */
     private class Node<T> {
@@ -905,32 +925,45 @@ public class History<T> {
             this.element = element;
         }
 
+        /**
+         * @return Stored value
+         */
         public T getElement() {
             return element;
         }
 
+        /**
+         * @return Previous node
+         */
         public Node<T> getPrevious() {
             return prev;
         }
 
+        /**
+         * @return Next node
+         */
         public Node<T> getNext() {
             return next;
         }
 
+        /**
+         * Set next node
+         * @param Node to insert
+         */
         public void setNext(Node<T> next) {
             this.next = next;
         }
 
+        /**
+         * Set previous node
+         * @param Node to insert
+         */
         public void setPrevious(Node<T> prev) {
             this.prev = prev;
         }
 
     }
 }
-```
-###### /java/seedu/task/model/ModelManager.java
-``` java
-        history.push(addressBook);
 ```
 ###### /java/seedu/task/model/ModelManager.java
 ``` java
@@ -958,6 +991,9 @@ public class History<T> {
 ```
 ###### /java/seedu/task/model/util/TaskNameGenerator.java
 ``` java
+/**
+ * Builder for randomly-generating task names
+ */
 public class TaskNameGenerator {
     private static final String[] ACTIONS = {
         "Walk",
@@ -1051,35 +1087,61 @@ public class TaskNameGenerator {
         return (previous != null ? previous.toString() + " " : "") + state;
     }
 
+    /**
+     * @return Set a random action
+     * @param Random object to use
+     */
     public static TaskNameGenerator doAction(Random r) {
         return doAction(r, CollectionUtil.getRandom(ACTIONS, r));
     }
 
+    /**
+     * @return Set a given action
+     * @param Random object to use
+     */
     public static TaskNameGenerator doAction(Random r, String action) {
         TaskNameGenerator.r = r;
         return new TaskNameGenerator(null, action);
     }
 
+    /**
+     * @return Set a random person to do with
+     */
     public TaskNameGenerator with() {
         return with(CollectionUtil.getRandom(NAMES, r));
     }
 
+    /**
+     * @return Set a given person to do with
+     */
     public TaskNameGenerator with(String name) {
         return new TaskNameGenerator(this, "with " + name);
     }
 
+    /**
+     * @return Set a random place to do in
+     */
     public TaskNameGenerator in() {
         return in(CollectionUtil.getRandom(PLACES, r));
     }
 
+    /**
+     * @return Set a given place to do in
+     */
     public TaskNameGenerator in(String place) {
         return new TaskNameGenerator(this, "in " + place);
     }
 
+    /**
+     * @return Randomly unset the previous call (frequency: 0.5)
+     */
     public TaskNameGenerator maybe() {
         return maybe(0.5f);
     }
 
+    /**
+     * @return Randomly unset the previous call with given frequency
+     */
     public TaskNameGenerator maybe(float chance) {
         if (r.nextFloat() > chance) {
             if (previous == null) {
@@ -1095,6 +1157,9 @@ public class TaskNameGenerator {
 ```
 ###### /java/seedu/task/model/util/TaskGroupGenerator.java
 ``` java
+/**
+ * Random generator for Task Group strings
+ */
 public class TaskGroupGenerator {
 
     private static final String[] GROUPS = {
@@ -1106,6 +1171,10 @@ public class TaskGroupGenerator {
         "ES",
     };
 
+    /**
+     * @param Random to use
+     * @return Randomly-chosen group
+     */
     public static String getGroup(Random r) {
         return CollectionUtil.getRandom(GROUPS, r);
     }
@@ -1120,6 +1189,10 @@ public class SampleDataUtil {
 
     Random r;
 
+    /**
+     * @param Number of tasks to generate
+     * @return Array of randonly-generated tasks
+     */
     public static ReadOnlyTask[] getSampleTasks(int n) {
         Set<Task> generated = new HashSet<Task>();
         for (int i = 0; i < n; i++) {
@@ -1155,6 +1228,9 @@ public class SampleDataUtil {
 ```
 ###### /java/seedu/task/model/util/TaskDateGenerator.java
 ``` java
+/**
+ * Random generator for Task start and end dates
+ */
 public class TaskDateGenerator {
 
     private static final int MAX_DAYS_TO_ADD = 255;
@@ -1204,6 +1280,10 @@ public class TaskDateGenerator {
 
     private static StartDate lastStartDate;
 
+    /**
+     * @param Random to use
+     * @return Randomly-generated start date
+     */
     public static StartDate getStartDate(Random r) {
         TaskDateGenerator.r = r;
 
@@ -1216,6 +1296,10 @@ public class TaskDateGenerator {
         return lastStartDate;
     }
 
+    /**
+     * @param Random to use
+     * @return Randomly generated end date
+     */
     public static EndDate getEndDate(Random r) {
         if (lastStartDate == null) {
             getStartDate(r);
@@ -1229,11 +1313,6 @@ public class TaskDateGenerator {
         }
     }
 }
-```
-###### /java/seedu/task/model/tag/Tag.java
-``` java
-    public static final String TAG_COMPLETE = "complete";
-    public static final String TAG_INCOMPLETE = "incomplete";
 ```
 ###### /java/seedu/task/model/tag/UniqueTagList.java
 ``` java
@@ -1278,15 +1357,11 @@ public class TaskDateGenerator {
 
         return tags;
     }
-
-}
 ```
 ###### /java/seedu/task/storage/TaskManagerStorage.java
 ``` java
     /** Sets the Address Book file path */
     void setAddressBookFilePath(String path);
-
-}
 ```
 ###### /java/seedu/task/storage/XmlAddressBookStorage.java
 ``` java
@@ -1294,8 +1369,6 @@ public class TaskDateGenerator {
     public void setAddressBookFilePath(String path) {
         this.filePath = path;
     }
-
-}
 ```
 ###### /java/seedu/task/storage/StorageManager.java
 ``` java
@@ -1346,8 +1419,6 @@ public class TaskDateGenerator {
     public void setAddressBookFilePath(String path) {
         addressBookStorage.setAddressBookFilePath(path);
     }
-
-}
 ```
 ###### /java/seedu/task/storage/Storage.java
 ``` java
@@ -1369,11 +1440,14 @@ public class TaskDateGenerator {
     void handleTargetFileRequestEvent(TargetFileRequestEvent tfre);
 
     void handleLoadRequestEvent(LoadRequestEvent ire);
-
-}
 ```
 ###### /java/seedu/task/ui/CommandBox.java
 ``` java
+    /**
+     * Sets hot-keys for this window:
+     * Up arrow - write last command to command box
+     * Down arrow - clears command box
+     */
     private void setAccelerators() {
         commandTextField.setOnKeyPressed(keyEvent -> {
             switch (keyEvent.getCode()) {
@@ -1390,12 +1464,18 @@ public class TaskDateGenerator {
 ```
 ###### /java/seedu/task/ui/CommandBox.java
 ``` java
+    /**
+     * Writes the last command string to the command box
+     */
     private void handleLast() {
         if (lastCommand != null) {
             commandTextField.setText(lastCommand);
         }
     }
 
+    /**
+     * Clears the command box
+     */
     private void handleClear() {
         commandTextField.clear();
     }
@@ -1429,11 +1509,15 @@ public class ThemeWindow extends Window {
         FxViewUtil.setStageIcon(stage, ICON);
         this.fxmlToApply = fxmlToApply;
 
-        setConnections(Theme.THEME_FILE_FOLDER);
+        setConnections();
         setEventHandlerForSelectionChangeEvent();
         setAccelerators();
     }
 
+    /**
+     * Sets hot-keys for this window:
+     * Enter - Closes window
+     */
     private void setAccelerators() {
         themeListView.setOnKeyPressed(new EventHandler<KeyEvent>() {
 
@@ -1447,15 +1531,24 @@ public class ThemeWindow extends Window {
         });
     }
 
+    /**
+     * Closes window
+     */
     @FXML
     public void handleExit() {
         getStage().close();
     }
 
-    private void setConnections(String path) {
+    /**
+     * Connects the list to the list of allowable themes
+     */
+    private void setConnections() {
         themeListView.setItems(Theme.THEMES);
     }
 
+    /**
+     * Sets handler for changing the selected theme for MainWindow on new selection
+     */
     private void setEventHandlerForSelectionChangeEvent() {
         themeListView.getSelectionModel().selectedItemProperty()
                .addListener((observable, oldValue, newValue) -> {
@@ -1469,6 +1562,10 @@ public class ThemeWindow extends Window {
 ```
 ###### /java/seedu/task/ui/MainWindow.java
 ``` java
+    /**
+     * Handle a JavaFX save button request.
+     * Initiates a saving sequence.
+     */
     @FXML
     public void handleSave() {
         File selected = FileUtil.promptSaveFileDialog("Save and Use YTomorrow File", getStage(),
@@ -1481,6 +1578,10 @@ public class ThemeWindow extends Window {
         }
     }
 
+    /**
+     * Handle a JavaFX load button request.
+     * Initiates a loading sequence.
+     */
     @FXML
     public void handleLoad() {
         File selected = FileUtil.promptOpenFileDialog("Load and Use YTomorrow File", getStage(),
@@ -1491,6 +1592,10 @@ public class ThemeWindow extends Window {
         }
     }
 
+    /**
+     * Handle a JavaFX export button request.
+     * Initiates an export sequence.
+     */
     @FXML
     public void handleExport() {
         File selected = FileUtil.promptSaveFileDialog("Export YTomorrow File", getStage(),
@@ -1502,6 +1607,10 @@ public class ThemeWindow extends Window {
         }
     }
 
+    /**
+     * Handle a JavaFX import button request.
+     * Initiates an import sequence
+     */
     @FXML
     public void handleImport() {
         File selected = FileUtil.promptOpenFileDialog("Import YTomorrow File", getStage(),
@@ -1512,6 +1621,10 @@ public class ThemeWindow extends Window {
         }
     }
 
+    /**
+     * Handle a JavaFX theme manager button request.
+     * Opens a ThemeWindow
+    */
     @FXML
     public void handleTheme() {
         ThemeWindow themeWindow = new ThemeWindow(getRoot());
@@ -1570,6 +1683,27 @@ public class Theme {
         ((Parent) fxmlLoader.getRoot()).getStylesheets().add(path);
     }
 ```
+###### /resources/view/Extensions.css
+``` css
+.error {
+    -fx-background-color: #f08080;
+}
+
+.incomplete {
+    -fx-border-color:  #ffcccc;
+}
+
+.complete {
+    -fx-border-color: #69dead;
+}
+
+.tag-selector {
+    -fx-border-width: 1;
+    -fx-border-color: white;
+    -fx-border-radius: 3;
+    -fx-background-radius: 3;
+}
+```
 ###### /resources/view/ThemeWindow.fxml
 ``` fxml
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
@@ -1581,4 +1715,47 @@ public class Theme {
 		<Label text="Press ENTER to exit."/>
 	</children>
 </VBox>
+```
+###### /resources/themes/BurntCyanTheme.css
+``` css
+#cardPane {
+    -fx-border-width: 2 2 2 24;
+}
+
+#cardPane #group {
+	-fx-font-size: 8pt;
+	-fx-font-family: "Segoe UI Light";
+	-fx-hgap: 7;
+    -fx-vgap: 3;
+    -fx-text-fill: white;
+    -fx-background-color: #383838;
+    -fx-padding: 1 1 1 1;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+}
+
+#cardPane .label {
+	-fx-font-size: 11pt;
+	-fx-font-family: "Segoe UI Light";
+}
+
+#commandTypeLabel {
+    -fx-font-size: 11px;
+    -fx-text-fill: #F70D1A;
+}
+
+#filterField, #personListPanel, #personWebpage {
+    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+}
+
+#tags .label {
+	-fx-hgap: 7;
+    -fx-vgap: 3;
+    -fx-text-fill: white;
+    -fx-background-color: #383838;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
 ```
