--- a/collated/test/A0164032U.md
+++ b/collated/test/A0164032U.md
@@ -1,5 +1,5 @@
 # A0164032U
-###### \java\guitests\EditCommandTest.java
+###### /java/guitests/EditCommandTest.java
 ``` java
     @Test
     public void edit_notAllFieldsSpecified_success() throws Exception {
@@ -12,7 +12,7 @@
         assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedPerson);
     }
 ```
-###### \java\guitests\EditCommandTest.java
+###### /java/guitests/EditCommandTest.java
 ``` java
     @Test
     public void edit_invalidValues_failure() {
@@ -21,7 +21,7 @@
 
         commandBox.runCommand("edit 1 s/ssse");
         assertResultMessage(Date.MESSAGE_DATE_CONSTRAINTS);
-        
+
         commandBox.runCommand("edit 1 d/iiie");
         assertResultMessage(Date.MESSAGE_DATE_CONSTRAINTS);
 
@@ -33,7 +33,45 @@
     @Test
     public void edit_duplicatePerson_failure() {
 ```
-###### \java\seedu\address\logic\LogicManagerTest.java
+###### /java/guitests/HelpWindowTest.java
+``` java
+public class HelpWindowTest extends AddressBookGuiTest {
+
+    @Test
+    public void openHelpWindow() {
+        //use accelerator
+    	
+    	// Help window will not open if click on TextField
+        commandBox.clickOnTextField();
+        assertHelpWindowNotOpen(mainMenu.openHelpWindowUsingAccelerator());
+        
+        // Help window will not open if click on TextArea
+        resultDisplay.clickOnTextArea();
+        assertHelpWindowNotOpen(mainMenu.openHelpWindowUsingAccelerator());
+        
+        // Help window will not open if click on List View
+        personListPanel.clickOnListView();
+        assertHelpWindowNotOpen(mainMenu.openHelpWindowUsingAccelerator());
+
+        //use menu button
+        assertHelpWindowOpen(mainMenu.openHelpWindowUsingMenu());
+
+        //use command
+        assertHelpWindowOpen(commandBox.runHelpCommand());
+    }
+
+    private void assertHelpWindowOpen(HelpWindowHandle helpWindowHandle) {
+        assertTrue(helpWindowHandle.isWindowOpen());
+        helpWindowHandle.closeWindow();
+    }
+
+    private void assertHelpWindowNotOpen(HelpWindowHandle helpWindowHandle) {
+        assertFalse(helpWindowHandle.isWindowOpen());
+    }
+
+}
+```
+###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_clear() throws Exception {
@@ -45,17 +83,27 @@
         assertCommandSuccess("clear all", ClearCommand.MESSAGE_SUCCESS_ALL, new YTomorrow(), Collections.emptyList());
     }
 ```
-###### \java\seedu\address\logic\LogicManagerTest.java
+###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_add_invalidArgsFormat() {
         String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE);
-        assertCommandFailure("add wrong args wrong args", expectedMessage);
-        assertCommandFailure("add Valid Name s/12.12 g/onlyStartTime", expectedMessage);
-        assertCommandFailure("add Valid Name butNoGroupPrefix valid s/12:12 d/23:59", expectedMessage);
+        assertCommandFailure("add wrong args wrong args", AddCommand.MESSAGE_NOGROUP+expectedMessage); // missing group
+        assertCommandFailure("add in learning", AddCommand.MESSAGE_NONAME+expectedMessage); // missing name
+        assertCommandFailure("add Valid Name from 12.12 in onlyStartTime", AddCommand.MESSAGE_ILLEGAL_TIME_PARAMS+expectedMessage); // missing endDate
     }
 ```
-###### \java\seedu\address\logic\LogicManagerTest.java
+###### /java/seedu/address/logic/LogicManagerTest.java
+``` java
+    @Test
+    public void execute_add_invalidPersonData() {
+        assertCommandFailure("add ??? in valid group",
+                AddCommand.MESSAGE_NONAME + String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+
+    }
+
+```
+###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_add_successful() throws Exception {
@@ -67,13 +115,14 @@
 
         // execute command and verify result
         assertCommandSuccess(helper.generateAddCommand(toBeAdded),
-                String.format(AddCommand.MESSAGE_SUCCESS + (toBeAdded.hasPassed() ? "\n" + AddCommand.MESSAGE_PASSED : ""), toBeAdded),
+                String.format(AddCommand.MESSAGE_SUCCESS
+                        + (toBeAdded.hasPassed() ? "\n" + AddCommand.MESSAGE_PASSEDDATE : ""), toBeAdded),
                 expectedAB,
-                expectedAB.getPersonList());
+                expectedAB.getTaskList());
 
     }
 ```
-###### \java\seedu\address\logic\LogicManagerTest.java
+###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
     @Test
     public void execute_deleteInvalidArgsFormat_errorMessageShown() throws Exception {
@@ -98,7 +147,7 @@
         assertCommandSuccess("delete 2",
                 String.format(DeleteCommand.MESSAGE_DELETE_TASK_SUCCESS, threePersons.get(1)),
                 expectedAB,
-                expectedAB.getPersonList());
+                expectedAB.getTaskList());
     }
 
 
@@ -122,7 +171,7 @@
         helper.addToModel(model, fourPersons);
 
         assertCommandSuccess("find KEY",
-                Command.getMessageForPersonListShownSummary(expectedList.size()),
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
                 expectedAB,
                 expectedList);
     }
@@ -141,7 +190,7 @@
         helper.addToModel(model, fourPersons);
 
         assertCommandSuccess("find KEY",
-                Command.getMessageForPersonListShownSummary(expectedList.size()),
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
                 expectedAB,
                 expectedList);
     }
@@ -160,7 +209,7 @@
         helper.addToModel(model, fourPersons);
 
         assertCommandSuccess("find key rAnDoM",
-                Command.getMessageForPersonListShownSummary(expectedList.size()),
+                Command.getMessageForTaskListShownSummary(expectedList.size()),
                 expectedAB,
                 expectedList);
     }
@@ -171,7 +220,7 @@
      */
     class TestDataHelper {
 ```
-###### \java\seedu\address\logic\LogicManagerTest.java
+###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
         /** Generates the correct add command based on the person given */
         String generateAddCommand(ReadOnlyTask p) {
@@ -180,61 +229,14 @@
             cmd.append("add ");
 
             cmd.append(p.getName().toString());
-            cmd.append(" s/").append(p.getStartDate());
-            cmd.append(" d/").append(p.getEndDate());
-            cmd.append(" g/").append(p.getGroup());
+            cmd.append(" from ").append(p.getStartDate());
+            cmd.append(" to ").append(p.getEndDate());
+            cmd.append(" in ").append(p.getGroup());
 
             return cmd.toString();
         }
 ```
-###### \java\seedu\address\model\task\DateTest.java
-``` java
-public class DateTest {
-
-    @Test
-    public void isValidDate() {
-        // invalid date
-        assertFalse(Date.isValidDate("")); // empty string
-        assertFalse(Date.isValidDate(" ")); // spaces only
-        assertFalse(Date.isValidDate("^")); // only non-alphanumeric characters
-        assertFalse(Date.isValidDate("peter*")); // contains non-alphanumeric characters
-        assertFalse(Date.isValidDate("testing")); // meaningless alphabets
-        
-        // valid date
-        assertTrue(Date.isValidDate("tomorrow")); // relative dates(relative to current date)
-        assertTrue(Date.isValidDate("3 weeks ago")); // relative dates(relative to current date)
-        assertTrue(Date.isValidDate("Apr 3")); // informal date
-        assertTrue(Date.isValidDate("2017/05/07")); // formal date
-        assertTrue(Date.isValidDate("tmr")); // informal date
-        assertTrue(Date.isValidDate("12:59")); // only time
-        assertTrue(Date.isValidDate("123456")); // time alternatives(will result in today 12:34:56)
-        assertTrue(Date.isValidDate("in 5 minutes")); // relative time
-        assertTrue(Date.isValidDate("Apr 3 12:00")); // date and time
-    }
-}
-```
-###### \java\seedu\address\model\task\GroupTest.java
-``` java
-public class GroupTest {
-
-    @Test
-    public void isValidGroup() {
-        // invalid group
-        assertFalse(Group.isValidGroup("")); // empty string
-        assertFalse(Group.isValidGroup(" ")); // spaces only
-
-        // valid group
-        assertTrue(Group.isValidGroup("^")); // only non-alphanumeric characters
-        assertTrue(Group.isValidGroup("peter*")); // contains non-alphanumeric characters
-        assertTrue(Group.isValidGroup("Final exam")); // alphabets only
-        assertTrue(Group.isValidGroup("12345")); // numbers only
-        assertTrue(Group.isValidGroup("pratice 4 english")); // alphanumeric characters
-        assertTrue(Group.isValidGroup("Team Work")); // with capital letters
-        assertTrue(Group.isValidGroup("Try to do the best in the following week")); // long names
-    }
-}
-```
-###### \java\seedu\address\testutil\PersonBuilder.java
+###### /java/seedu/address/testutil/PersonBuilder.java
 ``` java
     public PersonBuilder withStartDate(String sdate) throws IllegalValueException {
         this.person.setStartDate(new StartDate(sdate));
@@ -247,7 +249,103 @@ public class GroupTest {
 
 }
 ```
-###### \java\seedu\address\testutil\TestPerson.java
+###### /java/seedu/address/testutil/TypicalTestPersons.java
+``` java
+    public TypicalTestPersons() {
+        try {
+            alice = new PersonBuilder()
+                    .withName("Alice Paul")
+                    .withGroup("group1")
+                    .withStartDate("01.01")
+                    .withEndDate("tomorrow")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            benson = new PersonBuilder()
+                    .withName("Benson Meier")
+                    .withGroup("311")
+                    .withStartDate("01.01")
+                    .withEndDate("12.11")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            carl = new PersonBuilder()
+                    .withName("Carl Kurz")
+                    .withGroup("wall street")
+                    .withStartDate("01.01")
+                    .withEndDate("10.01")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            daniel = new PersonBuilder()
+                    .withName("Daniel Meier")
+                    .withGroup("street")
+                    .withStartDate("01.01")
+                    .withEndDate("11.11")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            elle = new PersonBuilder()
+                    .withName("Elle Meyer")
+                    .withGroup("michegan")
+                    .withStartDate("01.01")
+                    .withEndDate("05.05")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            fiona = new PersonBuilder()
+                    .withName("Fiona Kunz")
+                    .withGroup("little tokyo")
+                    .withStartDate("01.01")
+                    .withEndDate("07.07")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+            george = new PersonBuilder()
+                    .withName("George Best")
+                    .withStartDate("01.01")
+                    .withEndDate("04.12")
+                    .withGroup("street")
+                    .withTags(Tag.TAG_INCOMPLETE)
+                    .build();
+
+            // Manually added
+            hoon = new PersonBuilder()
+                    .withName("Hoon Meier")
+                    .withStartDate("01.01")
+                    .withEndDate("05.05")
+                    .withGroup("little india")
+                    .withTags("incomplete")
+                    .build();
+            ida = new PersonBuilder()
+                    .withName("Ida Mueller")
+                    .withStartDate("03.03")
+                    .withEndDate("08.08")
+                    .withGroup("chicago")
+                    .withTags("incomplete")
+                    .build();
+        } catch (IllegalValueException e) {
+            e.printStackTrace();
+            assert false : "not possible";
+        }
+    }
+
+    public static void loadAddressBookWithSampleData(YTomorrow ab) {
+        for (TestPerson person : new TypicalTestPersons().getTypicalPersons()) {
+            try {
+                ab.addPerson(new Task(person));
+            } catch (UniqueTaskList.DuplicateTaskException e) {
+                assert false : "not possible";
+            }
+        }
+    }
+
+    public TestPerson[] getTypicalPersons() {
+        return new TestPerson[]{alice, benson, carl, daniel, elle, fiona, george};
+    }
+
+    public YTomorrow getTypicalAddressBook() {
+        YTomorrow ab = new YTomorrow();
+        loadAddressBookWithSampleData(ab);
+        return ab;
+    }
+}
+```
+###### /java/seedu/address/testutil/TestPerson.java
 ``` java
 public class TestPerson implements ReadOnlyTask {
 
@@ -279,6 +377,7 @@ public class TestPerson implements ReadOnlyTask {
     }
 
     public void setGroup(Group group) {
+        assert group != null;
         this.group = group;
     }
 
@@ -286,7 +385,7 @@ public class TestPerson implements ReadOnlyTask {
     public void setStartDate(StartDate start) {
         this.start = start;
     }
-    
+
     public void setEndDate(EndDate end) {
         this.end = end;
     }
@@ -305,7 +404,7 @@ public class TestPerson implements ReadOnlyTask {
     public StartDate getStartDate() {
         return start;
     }
-    
+
     @Override
     public EndDate getEndDate() {
         return end;
@@ -318,7 +417,7 @@ public class TestPerson implements ReadOnlyTask {
 
     @Override
     public UniqueTagList getTags() {
-        return tags;
+    	return new UniqueTagList(tags);
     }
 
     @Override
@@ -329,23 +428,72 @@ public class TestPerson implements ReadOnlyTask {
     public String getAddCommand() {
         StringBuilder sb = new StringBuilder();
         sb.append("add " + this.getName().fullName + " ");
-        sb.append("s/" + this.getStartDate().inputValue + " ");
-        sb.append("d/" + this.getEndDate().inputValue + " ");
+        sb.append("s/" + this.getStartDate().getInputValue() + " ");
+        sb.append("d/" + this.getEndDate().getInputValue() + " ");
         sb.append("g/" + this.getGroup().value + " ");
-        //this.getTags().asObservableList().stream().forEach(s -> sb.append("t/" + s.tagName + " "));
         return sb.toString();
     }
 
-    public boolean hasPassed() {
+    @Override
+	public boolean hasPassed() {
         return false;
     }
 
-    public java.util.Date getEndTime() {
+    @Override
+	public java.util.Date getEndTime() {
         return null;
     }
 
-    public java.util.Date getStartTime() {
+    @Override
+	public java.util.Date getStartTime() {
         return null;
+    }
+}
+```
+###### /java/seedu/address/model/task/DateTest.java
+``` java
+public class DateTest {
+
+    @Test
+    public void isValidDate() {
+        // invalid date
+        assertFalse(Date.isValidDate("")); // empty string
+        assertFalse(Date.isValidDate(" ")); // spaces only
+        assertFalse(Date.isValidDate("^")); // only non-alphanumeric characters
+        assertFalse(Date.isValidDate("peter*")); // contains non-alphanumeric characters
+        assertFalse(Date.isValidDate("testing")); // meaningless alphabets
+
+        // valid date
+        assertTrue(Date.isValidDate("tomorrow")); // relative dates(relative to current date)
+        assertTrue(Date.isValidDate("3 weeks ago")); // relative dates(relative to current date)
+        assertTrue(Date.isValidDate("Apr 3")); // informal date
+        assertTrue(Date.isValidDate("2017/05/07")); // formal date
+        assertTrue(Date.isValidDate("tmr")); // informal date
+        assertTrue(Date.isValidDate("12:59")); // only time
+        assertTrue(Date.isValidDate("123456")); // time alternatives(will result in today 12:34:56)
+        assertTrue(Date.isValidDate("in 5 minutes")); // relative time
+        assertTrue(Date.isValidDate("Apr 3 12:00")); // date and time
+    }
+}
+```
+###### /java/seedu/address/model/task/GroupTest.java
+``` java
+public class GroupTest {
+
+    @Test
+    public void isValidGroup() {
+        // invalid group
+        assertFalse(Group.isValidGroup("")); // empty string
+        assertFalse(Group.isValidGroup(" ")); // spaces only
+
+        // valid group
+        assertTrue(Group.isValidGroup("^")); // only non-alphanumeric characters
+        assertTrue(Group.isValidGroup("peter*")); // contains non-alphanumeric characters
+        assertTrue(Group.isValidGroup("Final exam")); // alphabets only
+        assertTrue(Group.isValidGroup("12345")); // numbers only
+        assertTrue(Group.isValidGroup("pratice 4 english")); // alphanumeric characters
+        assertTrue(Group.isValidGroup("Team Work")); // with capital letters
+        assertTrue(Group.isValidGroup("Try to do the best in the following week")); // long names
     }
 }
 ```
