--- a/collated/test/A0164889E.md
+++ b/collated/test/A0164889E.md
@@ -1,9 +1,9 @@
 # A0164889E
-###### \java\guitests\EditCommandTest.java
+###### /java/guitests/EditCommandTest.java
 ``` java
         String detailsToEdit = "Bobby s/01.01 d/12.04 g/project";
 ```
-###### \java\guitests\EditCommandTest.java
+###### /java/guitests/EditCommandTest.java
 ``` java
         TestPerson editedPerson = new PersonBuilder()
                 .withName("Bobby")
@@ -15,11 +15,11 @@
         assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedPerson);
     }
 ```
-###### \java\guitests\EditCommandTest.java
+###### /java/guitests/EditCommandTest.java
 ``` java
         commandBox.runCommand("edit 3 Alice Paul s/01.01 d/12.12 "
                                 + "g/group1");
-        assertResultMessage(EditCommand.MESSAGE_DUPLICATE_PERSON);
+        assertResultMessage(EditCommand.MESSAGE_DUPLICATE_TASK);
     }
 
     /**
@@ -42,17 +42,17 @@
         // confirm the list now contains all previous persons plus the person with updated details
         expectedPersonsList[addressBookIndex - 1] = editedPerson;
         assertTrue(personListPanel.isListMatching(expectedPersonsList));
-        assertResultMessage(String.format(EditCommand.MESSAGE_EDIT_PERSON_SUCCESS, editedPerson));
+        assertResultMessage(String.format(EditCommand.MESSAGE_EDIT_TASK_SUCCESS, editedPerson));
     }
 }
 ```
-###### \java\guitests\guihandles\PersonCardHandle.java
+###### /java/guitests/guihandles/PersonCardHandle.java
 ``` java
     public String getGroup() {
         return getTextFromLabel(GROUP_FIELD_ID);
     }
 ```
-###### \java\guitests\guihandles\PersonCardHandle.java
+###### /java/guitests/guihandles/PersonCardHandle.java
 ``` java
     public String getStartDate() {
         return getTextFromLabel(STARTDATE_FIELD_ID);
@@ -61,7 +61,7 @@
     public String getEndDate() {
         return getTextFromLabel(ENDDATE_FIELD_ID);
     }
-    
+
     public List<String> getTags() {
         return getTags(getTagsContainer());
     }
@@ -113,15 +113,80 @@
     }
 }
 ```
-###### \java\seedu\address\commons\util\ConfigUtilTest.java
+###### /java/seedu/address/logic/LogicManagerTest.java
+``` java
+        Task adam() throws Exception {
+            Name name = new Name("Adm Brown");
+            EndDate privateEndDate = new EndDate("12.11");
+            StartDate privateStartDate = new StartDate("12.00");
+            Group privateGroup = new Group("leisure time");
+            return new Task(name, privateStartDate, privateEndDate,
+                    privateGroup, UniqueTagList.build(Tag.TAG_INCOMPLETE));
+        }
+
+```
+###### /java/seedu/address/logic/LogicManagerTest.java
+``` java
+        /**
+         * Generates a valid person using the given seed.
+         * Running this function with the same parameter values guarantees the returned person will have the same state.
+         * Each unique seed will generate a unique Person object.
+         *
+         * @param seed used to generate the person data field values
+         */
+        Task generatePerson(int seed) throws Exception {
+            return new Task(
+                    new Name("Person " + seed),
+                    new StartDate("0" + Math.abs(seed) + ".0" + Math.abs(seed)),
+                    new EndDate("0" + Math.abs(seed) + ".0" + Math.abs(seed)),
+                    new Group("list of " + seed),
+                    new UniqueTagList(new Tag("tag" + Math.abs(seed)), new Tag("tag" + Math.abs(seed + 1)))
+            );
+        }
+
+```
+###### /java/seedu/address/logic/LogicManagerTest.java
+``` java
+        /**
+         * Generates a Person object with given name. Other fields will have some dummy values.
+         */
+        Task generatePersonWithName(String name) throws Exception {
+            return new Task(
+                    new Name(name),
+                    new StartDate("12.21"),
+                    new EndDate("12.11"),
+                    new Group("list of 1"),
+                    new UniqueTagList(new Tag("tag"))
+            );
+        }
+    }
+}
+```
+###### /java/seedu/address/testutil/PersonBuilder.java
+``` java
+    public PersonBuilder withGroup(String group) throws IllegalValueException {
+        this.person.setGroup(new Group(group));
+        return this;
+    }
+
+```
+###### /java/seedu/address/testutil/PersonBuilder.java
+``` java
+    public PersonBuilder withEndDate(String date) throws IllegalValueException {
+        this.person.setEndDate(new EndDate(date));
+        return this;
+    }
+
+```
+###### /java/seedu/address/commons/util/ConfigUtilTest.java
 ``` java
     private Config getTypicalConfig() {
         Config config = new Config();
         config.setAppTitle("Typical App Title");
         config.setLogLevel(Level.INFO);
         config.setUserPrefsFilePath("C:\\preferences.json");
-        config.setAddressBookFilePath("addressbook.xml");
-        config.setAddressBookName("TypicalAddressBookName");
+        config.setTaskManagerFilePath("addressbook.xml");
+        config.setTaskManagerName("TypicalAddressBookName");
         return config;
     }
 
@@ -173,171 +238,5 @@
     }
 
 
-}
-```
-###### \java\seedu\address\logic\LogicManagerTest.java
-``` java
-    @Test
-    public void execute_add_invalidPersonData() {
-        assertCommandFailure("add Valid Name d/not_numbers g/valid, group",
-                Date.MESSAGE_DATE_CONSTRAINTS);
-        assertCommandFailure("add []\\[;] d/12.12 g/valid, group",
-                Name.MESSAGE_NAME_CONSTRAINTS);
-
-    }
-
-```
-###### \java\seedu\address\logic\LogicManagerTest.java
-``` java
-        Task adam() throws Exception {
-            Name name = new Name("Adm Brown");
-            EndDate privateEndDate = new EndDate("12.11");
-            StartDate privateStartDate = new StartDate("12.20");
-            Group privateGroup = new Group("leisure time");
-            return new Task(name, privateStartDate, privateEndDate, privateGroup, UniqueTagList.build(Tag.TAG_INCOMPLETE));
-        }
-
-```
-###### \java\seedu\address\logic\LogicManagerTest.java
-``` java
-        /**
-         * Generates a valid person using the given seed.
-         * Running this function with the same parameter values guarantees the returned person will have the same state.
-         * Each unique seed will generate a unique Person object.
-         *
-         * @param seed used to generate the person data field values
-         */
-        Task generatePerson(int seed) throws Exception {
-            return new Task(
-                    new Name("Person " + seed),
-                    new StartDate("0" + Math.abs(seed) + ".0" + Math.abs(seed)),
-                    new EndDate("0" + Math.abs(seed) + ".0" + Math.abs(seed)),
-                    new Group("list of " + seed),
-                    new UniqueTagList(new Tag("tag" + Math.abs(seed)), new Tag("tag" + Math.abs(seed + 1)))
-            );
-        }
-
-```
-###### \java\seedu\address\logic\LogicManagerTest.java
-``` java
-        /**
-         * Generates a Person object with given name. Other fields will have some dummy values.
-         */
-        Task generatePersonWithName(String name) throws Exception {
-            return new Task(
-                    new Name(name),
-                    new StartDate("12.21"),
-                    new EndDate("12.11"),
-                    new Group("list of 1"),
-                    new UniqueTagList(new Tag("tag"))
-            );
-        }
-    }
-}
-```
-###### \java\seedu\address\testutil\PersonBuilder.java
-``` java
-    public PersonBuilder withGroup(String group) throws IllegalValueException {
-        this.person.setGroup(new Group(group));
-        return this;
-    }
-
-```
-###### \java\seedu\address\testutil\PersonBuilder.java
-``` java
-    public PersonBuilder withEndDate(String date) throws IllegalValueException {
-        this.person.setEndDate(new EndDate(date));
-        return this;
-    }
-    
-```
-###### \java\seedu\address\testutil\TypicalTestPersons.java
-``` java
-    public TypicalTestPersons() {
-        try {
-            alice = new PersonBuilder()
-                    .withName("Alice Paul")
-                    .withGroup("group1")
-                    .withStartDate("01.01")
-                    .withEndDate("12.12")
-                    .withTags("complete")
-                    .build();
-            benson = new PersonBuilder()
-                    .withName("Benson Meier")
-                    .withGroup("311")
-                    .withEndDate("12.11")
-                    .withTags("incomplete")
-                    .build();
-            carl = new PersonBuilder()
-                    .withName("Carl Kurz")
-                    .withGroup("wall street")
-                    .withEndDate("10.01")
-                    .withTags("complete")
-                    .build();
-            daniel = new PersonBuilder()
-                    .withName("Daniel Meier")
-                    .withGroup("street")
-                    .withEndDate("11.11")
-                    .withTags("incomplete")
-                    .build();
-            elle = new PersonBuilder()
-                    .withName("Elle Meyer")
-                    .withGroup("michegan")
-                    .withEndDate("05.05")
-                    .withTags("incomplete")
-                    .build();
-            fiona = new PersonBuilder()
-                    .withName("Fiona Kunz")
-                    .withGroup("little tokyo")
-                    .withEndDate("07.07")
-                    .withTags("incomplete")
-                    .build();
-            george = new PersonBuilder()
-                    .withName("George Best")
-                    .withEndDate("04.12")
-                    .withGroup("street")
-                    .withTags("incomplete")
-                    .build();
-
-            // Manually added
-            hoon = new PersonBuilder()
-                    .withName("Hoon Meier")
-                    .withStartDate("01.01")
-                    .withEndDate("05.05")
-                    .withGroup("little india")
-                    .withTags("incomplete")
-                    .build();
-            ida = new PersonBuilder()
-                    .withName("Ida Mueller")
-                    .withStartDate("03.03")
-                    .withEndDate("08.08")
-                    .withGroup("chicago")
-                    .withTags("incomplete")
-                    .build();
-        } catch (IllegalValueException e) {
-            e.printStackTrace();
-            assert false : "not possible";
-        }
-    }
-
-    public static void loadAddressBookWithSampleData(YTomorrow ab) {
-        for (TestPerson person : new TypicalTestPersons().getTypicalPersons()) {
-            try {
-                ab.addPerson(new Task(person));
-            } catch (UniqueTaskList.DuplicatePersonException e) {
-                assert false : "not possible";
-            }
-        }
-    }
-
-    public TestPerson[] getTypicalPersons() {
-        return new TestPerson[]{alice, benson, carl, daniel, elle, fiona, george};
-    }
-
-    public YTomorrow getTypicalAddressBook() {
-        YTomorrow ab = new YTomorrow();
-        loadAddressBookWithSampleData(ab);
-        return ab;
-    }
 }
 ```
