--- a/collated/unused/A0164032U.md
+++ b/collated/unused/A0164032U.md
@@ -1,5 +1,100 @@
 # A0164032U
-###### \java\seedu\address\model\task\StartDate.java
+###### /java/seedu/address/logic/parser/AddCommandParser.java
+``` java
+    public Command parse(String args) {
+        ArgumentTokenizer argsTokenizer = new ArgumentTokenizer(PREFIX_STARTDATE, PREFIX_ENDDATE, PREFIX_GROUP);
+        argsTokenizer.tokenize(args);
+        try {
+            if (!argsTokenizer.getEmpty(PREFIX_STARTDATE) && !argsTokenizer.getEmpty(PREFIX_ENDDATE)) {
+                
+                return new AddCommand(
+                        argsTokenizer.getPreamble().get(),
+                        argsTokenizer.getValue(PREFIX_STARTDATE).get(),
+                        argsTokenizer.getValue(PREFIX_ENDDATE).get(),
+                        argsTokenizer.getValue(PREFIX_GROUP).get()
+                        );
+                
+            } else if (!argsTokenizer.getEmpty(PREFIX_ENDDATE)) {
+                
+                return new AddCommand(
+                        argsTokenizer.getPreamble().get(),
+                        argsTokenizer.getValue(PREFIX_ENDDATE).get(),
+                        argsTokenizer.getValue(PREFIX_GROUP).get()
+                        );
+                
+            } else if (!argsTokenizer.getEmpty(PREFIX_STARTDATE)) {
+                
+                throw new NoSuchElementException("");
+                
+            } else {
+                
+                return new AddCommand(
+                        argsTokenizer.getPreamble().get(),
+                        argsTokenizer.getValue(PREFIX_GROUP).get()
+                        );
+            }
+        } catch (NoSuchElementException nsee) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
+        } catch (IllegalValueException ive) {
+            return new IncorrectCommand(ive.getMessage());
+        }
+    }
+
+}
+```
+###### /java/seedu/address/logic/commands/AddCommand.java
+``` java
+    public AddCommand(String name, String end, String group) throws IllegalValueException {
+        this.toAdd = new DeadlineTask(
+                new Name(name),
+                new EndDate(end),
+                new Group(group),
+                UniqueTagList.build(Tag.TAG_INCOMPLETE)
+                );
+    }
+
+    /*
+     * Constructor: floating task without starting date and end date
+     */
+```
+###### /java/seedu/address/logic/commands/AddCommand.java
+``` java
+    public AddCommand(String name, String group) throws IllegalValueException {
+        this.toAdd = new FloatingTask(
+                new Name(name),
+                new Group(group),
+                UniqueTagList.build(Tag.TAG_INCOMPLETE)
+                );
+    }
+
+```
+###### /java/seedu/address/logic/commands/AddCommand.java
+``` java
+    public AddCommand(String name, String start, String end, String group) throws IllegalValueException {
+        this.toAdd = new Task(
+                new Name(name),
+                new StartDate(start),
+                new EndDate(end),
+                new Group(group),
+                UniqueTagList.build(Tag.TAG_INCOMPLETE)
+                );
+    }
+    @Override
+    public CommandResult execute() throws CommandException {
+        assert model != null;
+        try {
+            model.addPerson(toAdd);
+
+            String message = MESSAGE_SUCCESS + (toAdd.hasPassed() ? "\n" + MESSAGE_PASSED : "");
+            return new CommandResult(String.format(message, toAdd));
+        } catch (UniquePersonList.DuplicatePersonException e) {
+            throw new CommandException(MESSAGE_DUPLICATE_TASK);
+        }
+
+    }
+}
+```
+###### /java/seedu/address/model/task/StartDate.java
 ``` java
 public class StartDate {
 
