--- a/collated/test/A0140887W.md
+++ b/collated/test/A0140887W.md
@@ -229,12 +229,39 @@ public class LoadCommandTest extends DoistGUITest {
 ``` java
 public class SortCommandTest extends DoistGUITest {
 
+    /**
+     * Runs sort priority command, asserts if tasks are sorted by priority, then asserts if message is correct
+     */
     @Test
     public void testSortByPriority() {
         List<SortType> list = new ArrayList<SortType>();
         list.add(SortType.PRIORITY);
         commandBox.runCommand("sort priority");
         assertSortedByPriority();
+        assertResultMessage(Command.getMessageForTaskListSortedSummary(list));
+    }
+
+    /**
+     * Runs sort alpha command, asserts if tasks are sorted by alphabetical order, then asserts if message is correct
+     */
+    @Test
+    public void testSortByAlphabetical() {
+        List<SortType> list = new ArrayList<SortType>();
+        list.add(SortType.ALPHA);
+        commandBox.runCommand("sort alpha");
+        assertSortedByAlphabetical();
+        assertResultMessage(Command.getMessageForTaskListSortedSummary(list));
+    }
+
+    /**
+     * Runs sort time command, asserts if tasks are sorted by timing, then asserts if message is correct
+     */
+    @Test
+    public void testSortByTiming() {
+        List<SortType> list = new ArrayList<SortType>();
+        list.add(SortType.TIME);
+        commandBox.runCommand("sort time");
+        assertSortedByTime();
         assertResultMessage(Command.getMessageForTaskListSortedSummary(list));
     }
 
@@ -249,6 +276,22 @@ public class SortCommandTest extends DoistGUITest {
         Comparator<ReadOnlyTask> priorityComparator = new ReadOnlyTaskPriorityComparator();
         for (int i = 0; i < displayedList.size() - 1; i++) {
             assertTrue(priorityComparator.compare(displayedList.get(i), displayedList.get(i + 1)) <= 0);
+        }
+    }
+
+    private void assertSortedByAlphabetical() {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        Comparator<ReadOnlyTask> alphaComparator = new ReadOnlyTaskAlphabetComparator();
+        for (int i = 0; i < displayedList.size() - 1; i++) {
+            assertTrue(alphaComparator.compare(displayedList.get(i), displayedList.get(i + 1)) <= 0);
+        }
+    }
+
+    private void assertSortedByTime() {
+        List<ReadOnlyTask> displayedList = taskListPanel.getListView().getItems();
+        Comparator<ReadOnlyTask> timeComparator = new ReadOnlyTaskTimingComparator();
+        for (int i = 0; i < displayedList.size() - 1; i++) {
+            assertTrue(timeComparator.compare(displayedList.get(i), displayedList.get(i + 1)) <= 0);
         }
     }
 }
@@ -592,86 +635,6 @@ public class PriorityTest {
         }
     }
 
-}
-```
-###### \java\seedu\doist\storage\XmlAliasListMapStorageTest.java
-``` java
-public class XmlAliasListMapStorageTest {
-    private static final String TEST_DATA_FOLDER = FileUtil.getPath("./src/test/data/XmlAliasListMapStorageTest/");
-
-    @Rule
-    public ExpectedException thrown = ExpectedException.none();
-
-    @Rule
-    public TemporaryFolder testFolder = new TemporaryFolder();
-
-    @Test
-    public void readAliasListMap_nullFilePath_assertionFailure() throws Exception {
-        thrown.expect(AssertionError.class);
-        readAliasListMap(null);
-    }
-
-    private java.util.Optional<ReadOnlyAliasListMap> readAliasListMap(String filePath) throws Exception {
-        return new XmlAliasListMapStorage(filePath).readAliasListMap(addToTestDataPathIfNotNull(filePath));
-    }
-
-    private String addToTestDataPathIfNotNull(String prefsFileInTestDataFolder) {
-        return prefsFileInTestDataFolder != null
-                ? TEST_DATA_FOLDER + prefsFileInTestDataFolder
-                : null;
-    }
-
-    @Test
-    public void read_missingFile_emptyResult() throws Exception {
-        assertFalse(readAliasListMap("NonExistentFile.xml").isPresent());
-    }
-
-    @Test
-    public void read_notXmlFormat_exceptionThrown() throws Exception {
-
-        thrown.expect(DataConversionException.class);
-        readAliasListMap("NotXmlFormatAliasListMap.xml");
-    }
-
-    @Test
-    public void readAndSaveTodoList_allInOrder_success() throws Exception {
-        String filePath = testFolder.getRoot().getPath() + "TempAliasListMap.xml";
-        AliasListMap original = new AliasListMap();
-        XmlAliasListMapStorage xmlAliasListMapStorage = new XmlAliasListMapStorage(filePath);
-
-        //Save in new file and read back
-        xmlAliasListMapStorage.saveAliasListMap(original, filePath);
-        ReadOnlyAliasListMap readBack = xmlAliasListMapStorage.readAliasListMap(filePath).get();
-        assertEquals(original, new AliasListMap(readBack));
-
-        //Modify data, overwrite exiting file, and read back
-        original.setAlias("hello", "add");
-        xmlAliasListMapStorage.saveAliasListMap(original, filePath);
-        readBack = xmlAliasListMapStorage.readAliasListMap(filePath).get();
-        assertEquals(original, new AliasListMap(readBack));
-
-        //Save and read without specifying file path
-        original.setAlias("goodbye", "add");
-        xmlAliasListMapStorage.saveAliasListMap(original); //file path not specified
-        readBack = xmlAliasListMapStorage.readAliasListMap().get(); //file path not specified
-        assertEquals(original, new AliasListMap(readBack));
-    }
-
-    @Test
-    public void saveAliasListMap_nullTodoList_assertionFailure() throws IOException {
-        thrown.expect(AssertionError.class);
-        saveAliasListMap(null, "SomeFile.xml");
-    }
-
-    private void saveAliasListMap(ReadOnlyAliasListMap aliasListMap, String filePath) throws IOException {
-        new XmlAliasListMapStorage(filePath).saveAliasListMap(aliasListMap, addToTestDataPathIfNotNull(filePath));
-    }
-
-    @Test
-    public void saveAliasListMap_nullFilePath_assertionFailure() throws IOException {
-        thrown.expect(AssertionError.class);
-        saveAliasListMap(new AliasListMap(), null);
-    }
 }
 ```
 ###### \java\seedu\doist\TestApp.java
